# github-bot

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  Procfile  README.md  main.py  mypy.ini  pyproject.toml
app/: config.py  github.py  release.py  schema.py  templates.py  views.py
